# wykobi

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
include/wykobi/: wykobi.hpp  wykobi_math.hpp
tests/: CMakeLists.txt  intersection.cpp
